--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,52 @@
 body {
-  margin: 0;
+  margin: 0 50px;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.Header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Header a {
+  margin: 0 10px;
+}
+
+#welcome {
+  text-align: center;
+}
+
+.user-list-item {
+  display: flex;
+  justify-content: space-between;
+  /*align-items: center;*/
+  width: 700px;
+  margin: 10px 0;
+}
+
+.email-item {
+  list-style: none;
+  width: 200px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.hide {
+  display: none;
+}
+
+#note-nav {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 0 30px 0;
+  width: 700px;
+}
+
+.space-holder {
+  width: 50px;
+}
+
+.highlighted-button {
+  background: lightblue;
 }
