migrated session components in one by one. hooked up primary sessions landing page to redux

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -292,3 +292,13 @@ textarea {
 .highlighted-button {
   background: lightblue;
 }
+
+.login-error {
+  height: 50px;
+}
+
+.login-btn-group {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
