--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -28,7 +28,7 @@ body {
   margin-top: 5%;
   padding-top: 2%;
   padding-bottom: 2%;
-  width: 25%;
+  width: 33%;
   background-color: white;
 }
 
@@ -294,11 +294,17 @@ textarea {
 }
 
 .login-error {
-  height: 50px;
+  font-size: 14px;
 }
 
 .login-btn-group {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+@media (max-width: 650px) {
+  .login-form {
+     width: 60%;
+  }
 }
